[MKTAS] This should solve the UI problems for chrome/safari on mobile.

--- a/AccountSnapshot/Style/gameprofile.css
+++ b/AccountSnapshot/Style/gameprofile.css
@@ -5,6 +5,10 @@
     height: 150px;
     border-bottom: 3px solid #FFF;
     padding-top: 20px;
+    background-image: url(../Images/UI/Background/gradient.png);
+    background-size: contain;
+    background-attachment: fixed;
+    z-index: 999;
 }
 
 .badgeImg {
@@ -194,6 +198,11 @@
     top: 0;
     height: 120px;
     border-bottom: 3px solid #FFF;
+    background-image: url(../Images/UI/Background/gradient.png);
+    background-size: contain;
+    background-attachment: fixed;
+    z-index: 999;
+    padding-bottom: 10px;
 }
 
 .listHeaderTxt {
@@ -237,7 +246,7 @@
 .listDiv {
     width:673px;
     margin: 0px auto;
-    height: calc(100vh - 150px);
+    /* height: calc(100vh - 150px); */
     overflow-y: scroll;
     scrollbar-width: thin;
     display: flex;
@@ -340,6 +349,7 @@
 
 .tabProfile {
     /* height: calc(100vh - 150px); */
+    padding-bottom: 20px;
 }
 
 .pastTourStats {
